@@ -247,4 +247,7 @@ If NAME is a remote file name, the local part of NAME is unquoted."
 
 ;;; TODO:
 
+;; * When we get rid of Emacs 24, replace "(mapconcat 'identity" by
+;;   "(string-join".
+
 ;;; tramp-compat.el ends here
