@@ -1,4 +1,9 @@
-2018-11-14  Michael Albinus  <michael.albinus@gmx.de>
+2018-10-24  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-make-tramp-file-name): Avoid check for empty
+	method with simplified `tramp-syntax'.
+
+2018-10-22  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-parse-sconfig-group): Support also "Host host1
 	host2 ..." syntax.  (Bug#33364)
